# MAI_OOP_Lab4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
test/: test_array.cpp  test_point.cpp  test_rectangle.cpp  test_square.cpp  test_triangle.cpp
